--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,8 @@ android {
 
     defaultConfig {
         applicationId "com.google.mlkit.vision.demo"
-        minSdkVersion 19
+
+        minSdkVersion 29
         multiDexEnabled true
         targetSdkVersion 34
 
@@ -130,6 +131,9 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.android.material:material:1.11.0'
 
+    implementation files('libs\\mysql-connector-java-5.0.0-beta-bin.jar')
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     // For how to setup gradle dependencies in Android X, see:
     // https://developer.android.com/training/testing/set-up-project#gradle-dependencies
     // Core library
@@ -160,7 +164,11 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+    implementation "com.airbnb.android:lottie:5.2.0"
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
 }
 
