--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,9 @@
         <activity
             android:name=".java.ShowFoodActivity"
             android:exported="false" />
+        <activity
+            android:name=".java.IntermediaryActivity"
+            android:exported="true" />
 
         <activity
             android:name=".java.BaseActivity"
